# admet_api

./: .flake8  .gitignore  .pre-commit-config.yaml  azure-pipelines.yml  docker-compose.yml
model_files/: config.yml
model_files/admet/: ames.json  bbb_martins.json  bioavailability_ma.json  caco2_wang.json  clearance_microsome_az.json  cyp2c9_substrate_carbonmangels.json  cyp2c9_veith.json  cyp2d6_substrate_carbonmangels.json  cyp3a4_substrate_carbonmangels.json  dili.json  half_life_obach.json  herg.json  hia_hou.json  lipophilicity_astrazeneca.json  pgp_broccatelli.json  ppbr_az.json  solubility_aqsoldb.json  vdss_lombardo.json
nginx_config/: default.conf
pyrmd/: Dockerfile  PyRMD_v1.03.py  app.py  configuration_file.ini  pyrmd.py  pyrmd_environment.yml  worker.py
pyrmd/PyRMD/tutorials/screening/: database_predictions.csv
server/: .env.example  .env.local  Dockerfile.dev  Dockerfile.worker  pyproject.toml
server/app/: main.py
server/app/api/api_v1/routers/: admet.py  retro_synth.py
server/app/core/: config.py  database.py
server/app/db/: mongo_utils.py
server/app/models/: models.py
server/app/utils/: result_utils.py  s3_utils.py  worker_utils.py
server/app/worker/: admet_utils.py  admet_worker.py  retro_worker.py
