[tool.poetry]
name = "reverse-synth-fastapi"
version = "0.1.0"
description = "Revese Syntesis API"
authors = ["temp"]

[tool.poetry.dependencies]
python = "3.9.16"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
python-dotenv = "^0.19.2"
motor = "^3.1.1"
aiobotocore = "^2.5.0"
tasktiger = "^0.18.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.0.0"

[tool.poetry.group.worker]
optional = true

[tool.poetry.group.worker.dependencies]
aizynthfinder = "^3.7.0"
deepchem = "^2.7.1"
tensorflow-addons = "^0.20.0"
tensorflow-probability = "^0.19.0"
torch = "2.0.0"
torchvision = "^0.15.1"
pytorch-lightning = "^2.0.2"
dgl = "^1.0.1"
dgllife = "^0.3.2"
jax = "^0.4.8"
dm-haiku = "^0.0.9"
optax = "^0.1.5"
mordred = "^1.2.0"
pubchempy = "^1.0.4"
torch-geometric = "^2.3.1"
mol2vec = {git = "https://github.com/samoturk/mol2vec"}
xgboost = "1.6"
jaxlib = "^0.4.7"
keras = "2.12.0"
tensorflow-cpu = "^2.12.0"
tensorflow-serving-api = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
   .eggs
  | .git
  | .venv
  | .eggs
  | .cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
